--- a/package.json
+++ b/package.json
@@ -1,26 +1,52 @@
 {
-  "name": "coins",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0"
-  }
+   "name": "coins",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev --turbo",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "@nextui-org/button": "^2.0.34",
+      "@nextui-org/input": "^2.2.2",
+      "@nextui-org/link": "^2.0.32",
+      "@nextui-org/pagination": "^2.0.33",
+      "@nextui-org/spinner": "^2.0.30",
+      "@nextui-org/system": "^2.2.2",
+      "@nextui-org/table": "^2.0.36",
+      "@nextui-org/theme": "^2.2.6",
+      "@tanstack/react-query": "^5.51.1",
+      "@tanstack/react-query-devtools": "^5.51.1",
+      "bignumber.js": "^9.1.2",
+      "chart.js": "^4.4.3",
+      "clsx": "^2.1.1",
+      "dayjs": "^1.11.11",
+      "framer-motion": "^11.3.0",
+      "next": "15.0.0-rc.0",
+      "next-themes": "^0.3.0",
+      "nprogress": "^0.2.0",
+      "react": "19.0.0-rc-f994737d14-20240522",
+      "react-dom": "19.0.0-rc-f994737d14-20240522",
+      "react-hot-toast": "^2.4.1",
+      "tailwind-variants": "^0.2.1"
+   },
+   "devDependencies": {
+      "@tanstack/eslint-plugin-query": "^5.51.1",
+      "@types/dom-view-transitions": "^1.0.4",
+      "@types/node": "^20",
+      "@types/nprogress": "^0.2.3",
+      "@types/react": "^18",
+      "@types/react-dom": "^18",
+      "eslint": "^8",
+      "eslint-config-next": "15.0.0-rc.0",
+      "eslint-config-prettier": "^9.1.0",
+      "eslint-plugin-import": "^2.29.1",
+      "eslint-plugin-sort-exports": "^0.9.1",
+      "postcss": "^8",
+      "prettier-plugin-tailwindcss": "^0.6.5",
+      "tailwindcss": "^3.4.1",
+      "typescript": "^5"
+   }
 }
