--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
       "@nextui-org/button": "^2.0.34",
       "@nextui-org/input": "^2.2.2",
       "@nextui-org/link": "^2.0.32",
+      "@nextui-org/navbar": "^2.0.33",
       "@nextui-org/pagination": "^2.0.33",
       "@nextui-org/spinner": "^2.0.30",
+      "@nextui-org/switch": "^2.0.31",
       "@nextui-org/system": "^2.2.2",
       "@nextui-org/table": "^2.0.36",
       "@nextui-org/theme": "^2.2.6",
+      "@react-aria/ssr": "^3.9.4",
+      "@react-aria/visually-hidden": "^3.8.12",
       "@tanstack/react-query": "^5.51.1",
       "@tanstack/react-query-devtools": "^5.51.1",
       "bignumber.js": "^9.1.2",
@@ -24,11 +28,11 @@
       "clsx": "^2.1.1",
       "dayjs": "^1.11.11",
       "framer-motion": "^11.3.0",
-      "next": "15.0.0-rc.0",
+      "next": "^14.2.5",
       "next-themes": "^0.3.0",
       "nprogress": "^0.2.0",
-      "react": "19.0.0-rc-f994737d14-20240522",
-      "react-dom": "19.0.0-rc-f994737d14-20240522",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
       "react-hot-toast": "^2.4.1",
       "tailwind-variants": "^0.2.1"
    },
