--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "react": "^18.3.1",
       "react-dom": "^18.3.1",
       "react-hot-toast": "^2.4.1",
-      "tailwind-variants": "^0.2.1"
+      "tailwind-variants": "^0.2.1",
+      "use-sound": "^4.0.3"
    },
    "devDependencies": {
       "@tanstack/eslint-plugin-query": "^5.51.1",
