--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "@react-aria/visually-hidden": "^3.8.12",
       "@tanstack/react-query": "^5.51.1",
       "@tanstack/react-query-devtools": "^5.51.1",
+      "@vercel/speed-insights": "^1.0.12",
       "bignumber.js": "^9.1.2",
       "chart.js": "^4.4.3",
       "clsx": "^2.1.1",
