--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
    },
    "dependencies": {
       "@nextui-org/button": "^2.0.34",
+      "@nextui-org/card": "^2.0.32",
+      "@nextui-org/chip": "^2.0.31",
       "@nextui-org/input": "^2.2.2",
       "@nextui-org/link": "^2.0.32",
       "@nextui-org/navbar": "^2.0.33",
       "@nextui-org/pagination": "^2.0.33",
+      "@nextui-org/select": "^2.2.3",
       "@nextui-org/spinner": "^2.0.30",
       "@nextui-org/switch": "^2.0.31",
       "@nextui-org/system": "^2.2.2",
       "@nextui-org/table": "^2.0.36",
+      "@nextui-org/tabs": "^2.0.33",
       "@nextui-org/theme": "^2.2.6",
+      "@nextui-org/tooltip": "^2.0.37",
       "@react-aria/ssr": "^3.9.4",
       "@react-aria/visually-hidden": "^3.8.12",
       "@tanstack/react-query": "^5.51.1",
